Origin RepProje referansları eklendi ve yeni sınıf oluşturuldu
`MovieApi.Application.csproj` dosyasına `MovieApi.Persistence` ve `MovieApi.Domain` projelerine referanslar eklendi. `Folder` öğeleri kaldırıldı.

`CreateCategoryCommandHandler.cs` dosyasında, `MovieContext` sınıfını kullanmak için gerekli `using` ifadeleri eklendi ve yeni bir `CreateCategoryCommandHandler` sınıfı tanımlanarak yapıcı metot oluşturuldu.

--- a/Core/MovieApi.Application/MovieApi.Application.csproj
+++ b/Core/MovieApi.Application/MovieApi.Application.csproj
@@ -7,8 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Features\CQRSDesignPattern\Handlers\CategoryHandlers\" />
     <Folder Include="Features\CQRSDesignPattern\Handlers\MovieHandlers\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Infrastructure\MovieApi.Persistence\MovieApi.Persistence.csproj" />
+    <ProjectReference Include="..\MovieApi.Domain\MovieApi.Domain.csproj" />
   </ItemGroup>
 
 </Project>
